classDiagram
    %% ============================================================
    %% CORE CLASSES (IMPLEMENTED)
    %% ============================================================

    class Owner {
        %% Unique identifier and contact info
        -id: string
        -name: string
        -email: string
        -phoneNumber: string
        %% Time constraints for daily planning
        -availableHoursPerDay: float
        -workStartHour: int
        -workStartMinute: int
        -workEndHour: int
        -workEndMinute: int
        -breakBetweenTasksMinutes: int
        -pets: Pet[]
        -tasks: Task[]

        %% Pet management
        +addPet(pet: Pet)
        +removePet(petId: string)
        +getPets()

        %% Task management
        +addTask(task: Task)
        +editTask(taskId: string, updates: dict)
        +deleteTask(taskId: string)
        +markTaskComplete(taskId: string)
        +getTasks()
        +getAllTasksAcrossPets()

        %% Scheduling
        +getAvailableHours()
        +getWorkDayStartTime(date: datetime)
        +getWorkDayEndTime(date: datetime)
    }

    class Pet {
        %% Basic pet information
        -id: string
        -name: string
        -type: string
        -age: int
        -ageMonths: int
        -gender: string
        -color: string
        -tasks: Task[]

        %% Task management
        +addTask(task: Task)
        +removeTask(taskId: string)
        +getTasks()
        +getTasksForDay(date: string)
    }

    class Task {
        %% Task identification and metadata
        -id: string
        -name: string
        -category: string
        -petId: string
        -notes: string

        %% Scheduling parameters
        -duration: int
        -priority: string
        -frequency: string
        -scheduledTime: string
        -dueDate: datetime
        -completed: bool

        %% Task behavior
        +isRecurring()
        +canFitInTimeSlot(startTime, endTime)
        +getEstimatedEndTime(startTime)
        +markComplete()
        +calculateNextDueDate()
        +createNextOccurrence()
    }

    class Scheduler {
        %% The "brain" that operates across an owner's pets
        -owner: Owner

        %% Aggregation and lookup
        +getAllTasks()
        +getTasksForDate(date: datetime)

        %% Algorithmic features
        +sortByPriority(tasks: Task[])
        +sortByDuration(tasks: Task[])
        +sortByTime(tasks: Task[])
        +filterByPet(tasks: Task[], petName: string)
        +filterByStatus(tasks: Task[], completed: bool)
        +detectConflicts(schedule: tuple[])
        +generateDailySchedule(date: datetime)

        %% Task completion
        +markTaskComplete(taskId: string)
    }

    %% ============================================================
    %% CORE RELATIONSHIPS
    %% ============================================================
    Owner "1" --> "*" Pet : owns
    Owner "1" --> "*" Task : creates/manages (owner-level)
    Pet "1" --> "*" Task : has
    Scheduler "1" --> "1" Owner : schedules for

    %% ============================================================
    %% FUTURE ENHANCEMENTS (NOT YET IMPLEMENTED)
    %% ============================================================

    %% FUTURE: TimeSlot class for conflict detection and gap management
    %% class TimeSlot {
    %%     -id: string
    %%     -startTime: datetime
    %%     -endTime: datetime
    %%     -isAvailable: boolean
    %%     +overlaps(other: TimeSlot)
    %%     +duration()
    %% }

    %% FUTURE: Preference class for scheduling constraints and owner preferences
    %% class Preference {
    %%     -id: string
    %%     -ownerId: string
    %%     -type: string
    %%     -rule: string
    %%     -priority: int
    %%     +apply(schedule: tuple[])
    %%     +validate(task: Task)
    %% }

    %% FUTURE: TaskTemplate for reusable recurring task blueprints
    %% class TaskTemplate {
    %%     -id: string
    %%     -name: string
    %%     -duration: int
    %%     -category: string
    %%     -defaultPriority: string
    %%     +createInstance(date: string): Task
    %%     +getRecurrencePattern()
    %% }

    %% FUTURE: ScheduleResult enum for operation status
    %% class ScheduleResult {
    %%     SUCCESS
    %%     INSUFFICIENT_TIME
    %%     CONFLICTING_TASKS
    %%     INVALID_CONSTRAINTS
    %% }

    %% FUTURE: Notification system for task reminders
    %% class Notification {
    %%     -id: string
    %%     -ownerId: string
    %%     -taskId: string
    %%     -scheduledTime: datetime
    %%     -type: string
    %%     +send()
    %%     +markAsRead()
    %% }

    %% FUTURE: PetHealthProfile for medical history and dietary info
    %% class PetHealthProfile {
    %%     -id: string
    %%     -petId: string
    %%     -allergies: string[]
    %%     -medicalHistory: string[]
    %%     -dietaryRestrictions: string[]
    %%     -vaccinations: dict
    %%     +updateAllergy(allergy: string)
    %%     +getHealthSummary()
    %% }

    %% FUTURE: TaskDependency for task ordering constraints
    %% class TaskDependency {
    %%     -id: string
    %%     -dependentTaskId: string
    %%     -prerequisiteTaskId: string
    %%     -mustPrecedeBy: int
    %%     +isSatisfied(schedule: tuple[])
    %% }

    %% FUTURE: Relationships for enhanced features
    %% Owner "1" --> "*" Preference : has
    %% Owner "1" --> "*" Notification : receives
    %% Pet "1" --> "1" PetHealthProfile : has
    %% Task "1" --> "*" TaskDependency : has
    %% Scheduler --> TimeSlot : uses
